# oop_lab1

./: .gitignore
lab1/: CMakeLists.txt
lab1/include/: solve.hpp
lab1/src/: main.cpp  solution1.cpp
lab1/test/: tests1.cpp
lab2/src/: main.cpp  solution2.cpp
lab2/test/: tests2.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: array.h  pentagon.h  point.h  rhomb.h  shape.h  trapeze.h  triangle.h
lab3/src/: array.cpp  pentagon.cpp  point.cpp  rhomb.cpp  trapeze.cpp
lab3/test/: tests3.cpp
